--- a/WebContent/partials/cards.html
+++ b/WebContent/partials/cards.html
@@ -17,9 +17,7 @@
 				<hr>
 				<div class="clearfix"></div> -->
 				<center>
-					<img
-						src="http://www.hdwallpapers-3d.com/wp-content/uploads/2014/06/cartoon-pictures-hd-wallpaper-2.jpg"
-						class="img-responsive img-thumbnail">
+					<img src="http://www.hdwallpapers-3d.com/wp-content/uploads/2014/06/cartoon-pictures-hd-wallpaper-2.jpg" class="img-responsive img-thumbnail">
 				</center>
 				<br>
 				<p>{{x.message}}</p>
