--- a/WebContent/partials/dashboard.html
+++ b/WebContent/partials/dashboard.html
@@ -31,4 +31,14 @@
 		<div class="panel-footer"></div>
 	</div>
 </div>
+<nav class="pagination-centered">
+  <ul class="pagination">
+    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+    <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+    <li><a href="#">2 <span class="sr-only"></span></a></li>
+    <li><a href="#">3 <span class="sr-only"></span></a></li>
+    <li><a href="#">4 <span class="sr-only"></span></a></li>
+    <li class="disabled"><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+  </ul>
+</nav>
 <div ng-include src="'partials/new-article.html'"></div>
