--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -18,7 +18,7 @@ body {
 	text-align: center;
 }
 
-.header, .carousel, footer {
+.header, .carousel, footer, .accordion {
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-top: 0px;
