--- a/WebContent/partials/dashboard.html
+++ b/WebContent/partials/dashboard.html
@@ -9,22 +9,25 @@
 				<tr>
 					<th colspan="6">
 					<div ng-include src="'partials/search.html'"></div>
-				<tr><th><input type="checkbox" /></th>
-					<th>Date</th>
-					<th>Article Name</th>
-					<th>Posted By</th>
-					<th colspan="3">Actions</th>
+					</th>
+				</tr>
+				<tr class="thead">
+					<th class="thead"><input type="checkbox"  ng-checked="selectedAll"/></th>
+					<th class="thead">Date</th>
+					<th class="thead">Article Name</th>
+					<th class="thead">Posted By</th>
+					<th colspan="3" class="thead">Actions</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="x in articles | filter:search">
-				    <td><input type="checkbox" /></td>
+				    <td class="thead"><input type="checkbox" ng-model="selectedAll"/></td>
 					<td ng-model="date">{{ x.date }}</td>
 					<td ng-model="article">{{ x.articleName }}</td>
 					<td ng-model="posted">{{ x.postedBy }}</td>
-					<td><a href="#/view"><i class="glyphicon glyphicon-pencil"></i></a></td>
-					<td><a ui-sref="view" ><i class="glyphicon glyphicon-eye-open"></i></a></td>
-					<td><a ui-sref="view"><i class="glyphicon glyphicon-trash"></i></a></td>
+					<td class="thead"><a href="#/view"><i class="glyphicon glyphicon-pencil"></i></a></td>
+					<td class="thead"><a ui-sref="view" ><i class="glyphicon glyphicon-eye-open"></i></a></td>
+					<td class="thead"><a ui-sref="view"><i class="glyphicon glyphicon-trash"></i></a></td>
 				</tr>
 			</tbody>
 		</table>
