--- a/WebContent/partials/search.html
+++ b/WebContent/partials/search.html
@@ -1,4 +1,4 @@
-<div class="col-lg-4 col-lg-offset-4">
+<!-- <div class="col-lg-4 col-lg-offset-4">
 	<form role="form">
 		<div class="form-group center-block">
 			<div class="input-group input-group-lg">
@@ -11,4 +11,4 @@
 			</div>
 		</div>
 	</form>
-</div>
+</div> -->
