updated cards and dashboard

--- a/WebContent/partials/view.html
+++ b/WebContent/partials/view.html
@@ -14,8 +14,8 @@
 	<!--end ribbon -->
 
 	<div id="example-9-content">
-		<label class="label-control" ng-model="editing.date">Date Posted:</label>{{editing.date}}
+		<label class="label-control" ng-model="editing.date">Date Posted: &nbsp;</label>{{editing.date}}
 		<br>
-		<label class="label-control" ng-model="editing.postedBy">Posted By</label>{{editing.postedBy}}
+		<label class="label-control" ng-model="editing.postedBy">Posted By: &nbsp;</label>{{editing.postedBy}}
 	</div>
 </div>
