--- a/WebContent/partials/dashboard.html
+++ b/WebContent/partials/dashboard.html
@@ -43,8 +43,8 @@
 					<td>{{ item.date }}</td>
 					<td>{{ item.articleName }}</td>
 					<td>{{ item.postedBy }}</td>
-					<td class="thead"><a ui-sref="edit" ng-click="editItem(item);"><i class="glyphicon glyphicon-pencil"></i></a></td>
-					<td class="thead"><a ui-sref="view" ng-click="editItem(item);"><i class="glyphicon glyphicon-eye-open"></i></a></td>
+					<td class="thead"><a href="" ui-sref="edit" ng-click="editItem(item);"><i class="glyphicon glyphicon-pencil"></i></a></td>
+					<td class="thead"><a href="" ui-sref="view" ng-click="editItem(item);"><i class="glyphicon glyphicon-eye-open"></i></a></td>
 					<td class="thead" ng-click="remove($index)"><a ui-sref="view"><i class="glyphicon glyphicon-trash"></i></a></td>
 				</tr>
 			</tbody>
