--- a/WebContent/partials/edit.html
+++ b/WebContent/partials/edit.html
@@ -1,5 +1,5 @@
 <div class="col-md-6" ng-show="editing">
-<div class="list-group well" ><!-- ng-show="editing" -->
+<div class="list-group well" >
   <form class="form-horizontal" role="form">
     <div class="modal-body">
       <div>
@@ -22,5 +22,41 @@
       <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
     </div>
   </form>
+</div>
+</div>
+
+<div class="col-md-6" ng-show="editing">
+<div class="panel panel-default">
+  <div class="panel-heading">Website:</div>
+  <div class="panel-body">
+   <a href="http://www.epsilon.com/">http://www.epsilon.com/</a>
+  </div>
+</div>
+</div>
+
+<div class="col-md-6" ng-show="editing">
+<div class="panel panel-default">
+  <div class="panel-heading">Date:</div>
+  <div class="panel-body">
+   <a href="http://www.epsilon.com/">http://www.epsilon.com/</a>
+  </div>
+</div>
+</div>
+
+<div class="col-md-6" ng-show="editing">
+<div class="panel panel-default">
+  <div class="panel-heading">Tags:</div>
+  <div class="panel-body">
+   <a href="http://www.epsilon.com/">Tags here...</a>
+  </div>
+</div>
+</div>
+
+<div class="col-md-6" ng-show="editing">
+<div class="panel panel-default">
+  <div class="panel-heading">Categories:</div>
+  <div class="panel-body">
+   <a href="http://www.epsilon.com/">Categories here...</a>
+  </div>
 </div>
 </div>
